--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
-    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "fetch-mock": "^9.11.0",
+    "history": "^5.3.0",
+    "jest": "^27.5.1",
+    "node-fetch": "^3.3.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.4.2",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
@@ -53,7 +58,9 @@
     "@babel/eslint-parser": "^7.21.8",
     "@babel/plugin-syntax-jsx": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "axios-mock-adapter": "^1.21.4",
     "babel-plugin-transform-imports": "^2.0.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
